# ClaudeGamingAdvisor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
config/: default_config.yaml
data/: games_database.json
docs/: API.md  INSTALLATION.md  USAGE.md
docs/images/: README.md
examples/: example_usage.py
src/gpu_gaming_advisor/: __init__.py  __main__.py  claude_advisor.py  cli.py  fps_predictor.py  game_analyzer.py  gpu_detector.py  monitor.py  py.typed  utils.py
tests/: __init__.py  test_claude_advisor.py  test_fps_predictor.py  test_game_analyzer.py  test_gpu_detector.py
